Mixed improvements I probably should have committed piecemeal.